<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Collector</string>
    <string name="collect_accelerometer">Collect Accelerometer</string>
    <string name="collect_light">Collect Light</string>
    <string name="ui_collector_radio_shade_title">Shade</string>
    <string name="ui_collector_radio_sun_title">Sun</string>
    <string name="ui_collector_radio_standing_title">Standing</string>
    <string name="ui_collector_radio_indoor_title">Indoors</string>
    <string name="ui_collector_radio_partial_cloud_title">Partial Cloud</string>
    <string name="ui_collector_radio_cloud_title">Cloud</string>
    <string name="ui_collector_radio_walking_title">Walking</string>
    <string name="ui_collector_radio_jogging_title">Jogging</string>
    <string name="ui_collector_radio_sprinting_title">Sprinting</string>
    <string name="ui_collector_radio_other_title">Others</string>
    <string name="ui_collector_button_start_title">Start</string>
    <string name="ui_collector_button_stop_title">Stop</string>
    <string name="ui_collector_button_delete_title">Delete</string>
    <string name="ui_collector_toast_file_deleted">All files deleted.</string>
    <string name="ui_sensor_service_notification_ticker">Collector started recording.</string>
    <string name="ui_sensor_service_notification_title">MyRuns Collector</string>
    <string name="ui_sensor_service_notification_content">Recording your activity data now</string>
    <string name="ui_sensor_service_toast_success_file_updated">Data file updated.</string>
    <string name="ui_sensor_service_toast_success_file_created">Data file created.</string>
    <string name="ui_sensor_service_toast_error_file_saving_failed">Failed saving the file. Check your storage.</string>
    
    <string name="sdefault">4</string>
    <string name="current_uvi_title">Current UVI</string>
    <string name="current_uvi_description">UVI Scale</string>
    
        
    <string name="loadSensor">Load Sensor</string>
    <string name="instantSample">Instant Sample</string>
    
    <string name="startStreaming">Start Streaming</string>
    <string name="stopStreaming">Stop Streaming</string>
    
    
</resources>